--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Project</title>
     <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script defer src="./src.js"></script>
+    <!-- <script defer src="./src.js"></script> -->
+    <script defer src="./src2.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
@@ -17,25 +18,21 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul id='parentEvents' class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link dataJobs" onclick="getData()" href="#">All Jobs</a>
+                <a class="nav-link" href="#">All Jobs</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle dataJobs" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Categories
-                </a>
+                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categories</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item " href="#">Action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link dataJobs" href="#">Saved Jobs💝</a>
+                <a class="nav-link" href="#">Saved Jobs💝</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -46,9 +43,13 @@
         </div>
       </nav>
       <div id="divArea">
-
+        <h1>Welcome to our jobs search service.</h1>
+        <p>To use our service all wjat you need is a good heart, and a little mind 🤠</p>
+        <br><hr><br>
+        <h3>Enjoy</h3>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
