--- a/index.html
+++ b/index.html
@@ -11,42 +11,52 @@
     <script defer src="./src2.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">Full-Stack</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul id='parentEvents' class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">All Jobs</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categories</a>
-                <ul class="dropdown-menu">
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand"><img src="./assets/jobBrand.svg" width="60" height="60" alt="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul id='parentEvents' class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"id='ALLJOBS'>All Jobs</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categories</a>
+              <ul class="dropdown-menu">
 
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Saved Jobs💝</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2 dataJobs" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Saved Jobs💝</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search" action="" id="searchForm">
+            <input class="form-control me-2" id='searchBar' type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" id='searchBtn'type="submit">Search</button>
+          </form>
         </div>
-      </nav>
+      </div>
+    </nav>
+  </header>
+    
       <div id="divArea">
-        <h1>Welcome to our jobs search service.</h1>
-        <p>To use our service all wjat you need is a good heart, and a little mind 🤠</p>
-        <br><hr><br>
-        <h3>Enjoy</h3>
+        <div class="infoJob">
+          <h1>Welcome to our jobs<small class="text-muted"> search service.</small></h1>
+          <p>To use our service all what you need is a good heart, and a little mind 🤠</p>
+          <br><hr><br><br>
+          <section>
+            <div class="content">
+              <h2>Enjoy.</h2>
+              <h2>Enjoy.</h2>
+            </div>
+          </section>
+        </div>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
