Need more improvement, styling and cleaning of code

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       </div>
     </nav>
   </header>
-    
+  <div class="spinner-border text-secondary mx-auto mx3" id="loader" role="status" style="display: none;">
+    <span class="visually-hidden">Loading...</span>
+  </div>
       <div id="divArea">
         <div class="infoJob">
           <h1>Welcome to our jobs<small class="text-muted"> search service.</small></h1>
