--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>JOB</title>
     <link rel="stylesheet" href="./style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <!-- <script defer src="./src.js"></script> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script defer src="./src2.js"></script>
-</head>
-<body>
+  </head>
+<body onload="fadeOutEffect()">
+  <div class="preloader">
+    <img src="./assets/loaderGif.gif" alt="spinner">
+  </div>
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
@@ -50,7 +52,7 @@
       <div id="divArea">
         <div class="infoJob">
           <h1>Welcome to our jobs<small class="text-muted"> search service.</small></h1>
-          <p>To use our service all what you need is a good heart, and a little mind 🤠</p>
+          <p>To use our service all you need is a good heart, and a little mind 🤠</p>
           <br><hr><br><br>
           <section>
             <div class="content">
