--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script defer src="./src2.js"></script>
   </head>
-<body onload="fadeOutEffect()">
+<body onload="fadeOutEffect">
   <div class="preloader">
     <img src="./assets/loaderGif.gif" alt="spinner">
   </div>
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand"><img src="./assets/jobBrand.svg" width="60" height="60" alt="logo"></a>
+        <a class="navbar-brand"><img src="./assets/jobBrand.svg" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,7 +31,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categories</a>
               <ul class="dropdown-menu">
-
+        
               </ul>
             </li>
             <li class="nav-item">
@@ -39,8 +39,8 @@
             </li>
           </ul>
           <form class="d-flex" role="search" action="" id="searchForm">
-            <input class="form-control me-2" id='searchBar' type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" id='searchBtn'type="submit">Search</button>
+            <input class="form-control me-2 " id='searchBar' type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-dark" id='searchBtn'type="submit">Search</button>
           </form>
         </div>
       </div>
@@ -50,10 +50,10 @@
     <span class="visually-hidden">Loading...</span>
   </div>
       <div id="divArea">
-        <div class="infoJob">
+        <div class="container-fluid text-center">
           <h1>Welcome to our jobs<small class="text-muted"> search service.</small></h1>
           <p>To use our service all you need is a good heart, and a little mind 🤠</p>
-          <br><hr><br><br>
+          <br><hr style="width:55vmin; margin:0 auto;"><br><br>
           <section>
             <div class="content">
               <h2>Enjoy.</h2>
